perldelta: Use new boiler plate
This uses for the current perldelta, the boiler plate from the perldelta
template added in the previous commit.

It also documents a significant test change in the current development
release.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -227,6 +227,10 @@ XXX Description of the purpose of the new file here
 
 =head2 Changes to Existing Documentation
 
+We have attempted to update the documentation to reflect the changes
+listed in this document.  If you find any we have missed, send email
+to L<perlbug@perl.org|mailto:perlbug@perl.org>.
+
 XXX Changes which significantly change existing files in F<pod/> go here.
 However, any changes to F<pod/perldiag.pod> should go in the L</Diagnostics>
 section.
@@ -325,19 +329,16 @@ XXX
 
 =head1 Testing
 
-XXX Any significant changes to the testing of a freshly built perl should be
-listed here.  Changes which create B<new> files in F<t/> go here as do any
-large changes to the testing harness (e.g. when parallel testing was added).
-Changes to existing files in F<t/> aren't worth summarizing, although the bugs
-that they represent may be covered elsewhere.
-
-[ List each test improvement as a =item entry ]
+Tests were added and changed to reflect the other additions and
+changes in this release.  Furthermore, these significant changes were
+made:
 
 =over 4
 
 =item *
 
-XXX
+Testing of the XS-APItest directory is now done in parallel, where
+applicable.
 
 =back
 
