--- a/pod/perlvar.pod
+++ b/pod/perlvar.pod
@@ -2167,11 +2167,13 @@ slot of the return of caller:
 
   sub hints_hash { (caller(0))[10] }
 
-During compilation this hash may be used to store complex structures, such
-as code references, however once compilation is completed these structures
-will be flattened to a representation that accommodates only simple
-values, which means that complex structures such as references
-can not be retrieved at run-time via C<caller()> as described above.
+During compilation this hash may be used to store complex structures,
+such as code references, as well as simple non-referential scalars. A
+flattened copy of the values written into the hash is stored with the
+code that was compiled while it was in effect, and is the copy
+available via the C<caller()> mechanism. This copy preserves simple
+strings and numbers, but will not preserve more complex values
+like references.
 
 When putting items into C<%^H>, in order to avoid conflicting with other
 users of the hash there is a convention regarding which keys to use.
