We now support building with Visual Studio 2017 (VC++ 14.1)
(Support was added by commits 58998b2a91, 82cad14406, 74102a88af and
88b1365899.)

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -431,9 +431,16 @@ XXX List any platforms that this version of perl no longer compiles on.
 
 =over 4
 
-=item XXX-some-platform
+=item Windows
 
-XXX
+=over 4
+
+=item *
+
+Support for compiling perl on Windows using Microsoft Visual Studio 2017
+(containing Visual C++ 14.1) has been added.
+
+=back
 
 =back
 
