--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -2,9 +2,6 @@
 
 =head1 NAME
 
-[ this is a template for a new perldelta file.  Any text flagged as XXX needs
-to be processed before release. ]
-
 perldelta - what is new for perl v5.27.1
 
 =head1 DESCRIPTION
@@ -15,17 +12,7 @@ release.
 If you are upgrading from an earlier release such as 5.26.0, first read
 L<perl5270delta>, which describes differences between 5.26.0 and 5.27.0.
 
-=head1 Notice
-
-XXX Any important notices here
-
 =head1 Core Enhancements
-
-XXX New core language features go here.  Summarize user-visible core language
-enhancements.  Particularly prominent performance optimisations could go
-here, but most should go in the L</Performance Enhancements> section.
-
-[ List each enhancement as a =head2 entry ]
 
 =head2 L<C<delete>|perlfunc/delete EXPR> on key/value slices
 
@@ -35,13 +22,9 @@ L<[perl #131328]|https://rt.perl.org/Ticket/Display.html?id=131328>
 
 =head1 Security
 
-XXX Any security-related notices go here.  In particular, any security
-vulnerabilities closed should be noted here rather than in the
-L</Selected Bug Fixes> section.
-
 =head2 Default Hash Function Change
 
-Perl 5.27.0 retires various older hash functions which are not viewed as
+Perl 5.27.1 retires various older hash functions which are not viewed as
 sufficiently secure for use in Perl. We now support four general purpose
 hash functions, Siphash (2-4 and 1-3 variants), and  Zaphod32, and StadtX
 hash. In addition we support SBOX32 (a form of tabular hashing) for hashing
@@ -70,14 +53,6 @@ The maximum length allowed is 256. There probably isn't much point
 in setting it higher than the default.
 
 =head1 Incompatible Changes
-
-XXX For a release on a stable branch, this section aspires to be:
-
-    There are no changes intentionally incompatible with 5.XXX.XXX
-    If any exist, they are bugs, and we request that you submit a
-    report.  See L</Reporting Bugs> below.
-
-[ List each incompatible change as a =head2 entry ]
 
 =head2 Comma-less variable lists in formats are no longer allowed
 
@@ -142,8 +117,6 @@ but has been broken for many years.
 
 =head1 Deprecations
 
-XXX Any deprecated features, syntax, modules etc. should be listed here.
-
 =head2 Use of L<C<vec>|perlfunc/vec EXPR,OFFSET,BITS> on strings with code
 points above 0xFF is deprecated.
 
@@ -168,41 +141,7 @@ around.
 
 Note that these uses continue to raise a deprecation message.
 
-=head2 Module removals
-
-XXX Remove this section if inapplicable.
-
-The following modules will be removed from the core distribution in a
-future release, and will at that time need to be installed from CPAN.
-Distributions on CPAN which require these modules will need to list them as
-prerequisites.
-
-The core versions of these modules will now issue C<"deprecated">-category
-warnings to alert you to this fact.  To silence these deprecation warnings,
-install the modules in question from CPAN.
-
-Note that these are (with rare exceptions) fine modules that you are encouraged
-to continue to use.  Their disinclusion from core primarily hinges on their
-necessity to bootstrapping a fully functional, CPAN-capable Perl installation,
-not usually on concerns over their design.
-
-=over
-
-=item XXX
-
-XXX Note that deprecated modules should be listed here even if they are listed
-as an updated module in the L</Modules and Pragmata> section.
-
-=back
-
-[ List each other deprecation as a =head2 entry ]
-
 =head1 Performance Enhancements
-
-XXX Changes which enhance performance without changing behaviour go here.
-There may well be none in a stable release.
-
-[ List each enhancement as a =item entry ]
 
 =over 4
 
@@ -221,31 +160,13 @@ longer bothers to construct a temporary string like C<Foo=ARRAY(0x134af48)>.
 
 =head1 Modules and Pragmata
 
-XXX All changes to installed files in F<cpan/>, F<dist/>, F<ext/> and F<lib/>
-go here.  If Module::CoreList is updated, generate an initial draft of the
-following sections using F<Porting/corelist-perldelta.pl>.  A paragraph summary
-for important changes should then be added by hand.  In an ideal world,
-dual-life modules would have a F<Changes> file that could be cribbed.
-
-[ Within each section, list entries as a =item entry ]
-
-=head2 New Modules and Pragmata
-
-=over 4
-
-=item *
-
-XXX
-
-=back
-
 =head2 Updated Modules and Pragmata
 
 =over 4
 
 =item *
 
-L<XXX> has been upgraded from version A.xx to B.yy.
+L<Archive::Tar> has been upgraded from version 2.24 to 2.26.
 
 =item *
 
@@ -256,130 +177,97 @@ correctly:
     my $x :foo;  # used to deparse as
                  # 'attributes'->import('main', \$x, 'foo'), my $x;
 
-=back
+=item *
 
-=head2 Removed Modules and Pragmata
-
-=over 4
+L<charnames> has been upgraded from version 1.44 to 1.45.
 
 =item *
 
-XXX
-
-=back
-
-=head1 Documentation
-
-XXX Changes to files in F<pod/> go here.  Consider grouping entries by
-file and be sure to link to the appropriate page, e.g. L<perlfunc>.
-
-=head2 New Documentation
-
-XXX Changes which create B<new> files in F<pod/> go here.
-
-=head3 L<XXX>
-
-XXX Description of the purpose of the new file here
-
-=head2 Changes to Existing Documentation
-
-We have attempted to update the documentation to reflect the changes
-listed in this document.  If you find any we have missed, send email
-to L<perlbug@perl.org|mailto:perlbug@perl.org>.
-
-XXX Changes which significantly change existing files in F<pod/> go here.
-However, any changes to F<pod/perldiag.pod> should go in the L</Diagnostics>
-section.
-
-=head3 L<XXX>
-
-=over 4
+L<Devel::PPPort> has been upgraded from version 3.35 to 3.36.
 
 =item *
 
-XXX Description of the change here
-
-=back
-
-=head1 Diagnostics
-
-The following additions or changes have been made to diagnostic output,
-including warnings and fatal error messages.  For the complete list of
-diagnostic messages, see L<perldiag>.
-
-XXX New or changed warnings emitted by the core's C<C> code go here.  Also
-include any changes in L<perldiag> that reconcile it to the C<C> code.
-
-=head2 New Diagnostics
-
-XXX Newly added diagnostic messages go under here, separated into New Errors
-and New Warnings
-
-=head3 New Errors
-
-=over 4
+L<DirHandle> has been upgraded from version 1.04 to 1.05.
 
 =item *
 
-XXX L<message|perldiag/"message">
-
-=back
-
-=head3 New Warnings
-
-=over 4
+L<ExtUtils::Install> has been upgraded from version 2.04 to 2.14.
 
 =item *
 
-XXX L<message|perldiag/"message">
-
-=back
-
-=head2 Changes to Existing Diagnostics
-
-XXX Changes (i.e. rewording) of diagnostic messages go here
-
-=over 4
+L<ExtUtils::MakeMaker> has been upgraded from version 7.24 to 7.30.
 
 =item *
 
-XXX Describe change here
-
-=back
-
-=head1 Utility Changes
-
-XXX Changes to installed programs such as F<perlbug> and F<xsubpp> go here.
-Most of these are built within the directory F<utils>.
-
-[ List utility changes as a =head2 entry for each utility and =item
-entries for each change
-Use L<XXX> with program names to get proper documentation linking. ]
-
-=head2 L<XXX>
-
-=over 4
+L<File::Path> has been upgraded from version 2.12_01 to 2.14.
 
 =item *
 
-XXX
-
-=back
-
-=head1 Configuration and Compilation
-
-XXX Changes to F<Configure>, F<installperl>, F<installman>, and analogous tools
-go here.  Any other changes to the Perl build process should be listed here.
-However, any platform-specific changes should be listed in the
-L</Platform Support> section, instead.
-
-[ List changes as a =item entry ].
-
-=over 4
+L<Filter::Util::Call> has been upgraded from version 1.55 to 1.57.
 
 =item *
 
-XXX
+L<GDBM_File> has been upgraded from version 1.15 to 1.16.
+
+=item *
+
+L<Getopt::Long> has been upgraded from version 2.49 to 2.5.
+
+=item *
+
+L<if> has been upgraded from version 0.0606 to 0.0607.
+
+=item *
+
+L<IO::Socket::IP> has been upgraded from version 0.38 to 0.39.
+
+=item *
+
+L<IPC::Cmd> has been upgraded from version 0.96 to 0.98.
+
+=item *
+
+L<JSON::PP> has been upgraded from version 2.27400_02 to 2.94.
+
+=item *
+
+L<Locale::Codes> has been upgraded from version 3.42 to 3.52.
+
+=item *
+
+L<Module::CoreList> has been upgraded from version 5.20170620 to 5.20170621.
+
+=item *
+
+L<mro> has been upgraded from version 1.20 to 1.21.
+
+=item *
+
+L<PerlIO::scalar> has been upgraded from version 0.26 to 0.27.
+
+=item *
+
+L<PerlIO::via> has been upgraded from version 0.16 to 0.17.
+
+=item *
+
+L<Storable> has been upgraded from version 2.62 to 2.63.
+
+=item *
+
+L<Test::Harness> has been upgraded from version 3.38 to 3.39.
+
+=item *
+
+L<threads> has been upgraded from version 2.15 to 2.16.
+
+=item *
+
+L<threads::shared> has been upgraded from version 1.56 to 1.57.
+
+=item *
+
+L<version> has been upgraded from version 0.9917 to 0.9918.
 
 =back
 
@@ -405,29 +293,7 @@ on github mirrors.  [perl #123981]
 
 =head1 Platform Support
 
-XXX Any changes to platform support should be listed in the sections below.
-
-[ Within the sections, list each platform as a =item entry with specific
-changes as paragraphs below it. ]
-
-=head2 New Platforms
-
-XXX List any platforms that this version of perl compiles on, that previous
-versions did not.  These will either be enabled by new files in the F<hints/>
-directories, or new subdirectories and F<README> files at the top level of the
-source tree.
-
-=over 4
-
-=item XXX-some-platform
-
-XXX
-
-=back
-
-=head2 Discontinued Platforms
-
-XXX List any platforms that this version of perl no longer compiles on.
+=head2 Platform-Specific Notes
 
 =over 4
 
@@ -444,28 +310,7 @@ Support for compiling perl on Windows using Microsoft Visual Studio 2017
 
 =back
 
-=head2 Platform-Specific Notes
-
-XXX List any changes for specific platforms.  This could include configuration
-and compilation changes or changes in portability/compatibility.  However,
-changes within modules for platforms should generally be listed in the
-L</Modules and Pragmata> section.
-
-=over 4
-
-=item XXX-some-platform
-
-XXX
-
-=back
-
 =head1 Internal Changes
-
-XXX Changes which affect the interface available to C<XS> code go here.  Other
-significant internal changes for future core maintainers should be noted as
-well.
-
-[ List each change as a =item entry ]
 
 =over 4
 
@@ -490,11 +335,6 @@ of the first variant character, if any are found.
 =back
 
 =head1 Selected Bug Fixes
-
-XXX Important bug fixes in the core language are summarized here.  Bug fixes in
-files in F<ext/> and F<lib/> are best summarized in L</Modules and Pragmata>.
-
-[ List each fix as a =item entry ]
 
 =over 4
 
@@ -523,43 +363,37 @@ C<$@>. For example:
 
 =back
 
-=head1 Known Problems
-
-XXX Descriptions of platform agnostic bugs we know we can't fix go here.  Any
-tests that had to be C<TODO>ed for the release would be noted here.  Unfixed
-platform specific bugs also go here.
-
-[ List each fix as a =item entry ]
-
-=over 4
-
-=item *
-
-XXX
-
-=back
-
-=head1 Errata From Previous Releases
-
-=over 4
-
-=item *
-
-XXX Add anything here that we forgot to add, or were mistaken about, in
-the perldelta of a previous release.
-
-=back
-
-=head1 Obituary
-
-XXX If any significant core contributor has died, we've added a short obituary
-here.
-
 =head1 Acknowledgements
 
-XXX Generate this with:
+Perl 5.27.1 represents approximately 3 weeks of development since Perl 5.27.0
+and contains approximately 62,000 lines of changes across 510 files from 30
+authors.
 
-  perl Porting/acknowledgements.pl v5.25.5..HEAD
+Excluding auto-generated files, documentation and release tools, there were
+approximately 55,000 lines of changes to 380 .pm, .t, .c and .h files.
+
+Perl continues to flourish into its third decade thanks to a vibrant community
+of users and developers. The following people are known to have contributed the
+improvements that became Perl 5.27.1:
+
+Aaron Crane, Abigail, Andy Dougherty, Andy Lester, Aristotle Pagaltzis, Chris
+'BinGOs' Williams, Craig A. Berry, Dagfinn Ilmari Mannsåker, Dan Collins,
+David Mitchell, Eric Herman, Eugen Konkov, Father Chrysostomos, Graham Knop,
+H.Merijn Brand, Jacques Germishuys, James E Keenan, Jerry D. Hedden, John
+Peacock, Karl Williamson, Ken Cotterill, Lukas Mai, Matthew Horsfall, Sawyer X,
+Steve Hay, Sullivan Beck, Thomas Sibley, Tony Cook, Yves Orton, Zefram.
+
+The list above is almost certainly incomplete as it is automatically generated
+from version control history. In particular, it does not include the names of
+the (very much appreciated) contributors who reported issues to the Perl bug
+tracker.
+
+Many of the changes included in this version originated in the CPAN modules
+included in Perl's core. We're grateful to the entire CPAN community for
+helping Perl to flourish.
+
+For a more complete list of all of Perl's historical contributors, please see
+the F<AUTHORS> file in the Perl source distribution.
 
 =head1 Reporting Bugs
 
