give Renee his "r" bäck
(cherry picked from commit 8e565cc84ae4d44bb5f668d4482a9b1eb733ebd4)

--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -33,7 +33,7 @@ Matt S Trout, David Golden, Florian Ragwitz, Tatsuhiko Miyagawa,
 Chris C<BinGOs> Williams, Zefram, Ævar Arnfjörð Bjarmason, Stevan
 Little, Dave Rolsky, Max Maischein, Abigail, Jesse Luehrs, Tony Cook,
 Dominic Hargreaves, Aaron Crane, Aristotle Pagaltzis, Matthew Horsfall,
-Peter Martini, Sawyer X, Chad 'Exodist' Granum, Renee Bäcke,
+Peter Martini, Sawyer X, Chad 'Exodist' Granum, Renee Bäcker,
 and Eric Herman.
 
 =head2 PUMPKIN?
