--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -61,9 +61,33 @@ L<[perl #129038]|https://rt.perl.org/Ticket/Display.html?id=129038>
 
 =head1 Acknowledgements
 
-XXX Generate this with:
+Perl 5.22.4 represents approximately 6 months of development since Perl 5.22.3
+and contains approximately 2,200 lines of changes across 52 files from 16
+authors.
 
-  perl Porting/acknowledgements.pl v5.22.3..HEAD
+Excluding auto-generated files, documentation and release tools, there were
+approximately 970 lines of changes to 18 .pm, .t, .c and .h files.
+
+Perl continues to flourish into its third decade thanks to a vibrant community
+of users and developers.  The following people are known to have contributed
+the improvements that became Perl 5.22.4:
+
+Aaron Crane, Abigail, Aristotle Pagaltzis, Chris 'BinGOs' Williams, David
+Mitchell, Eric Herman, Father Chrysostomos, James E Keenan, Karl Williamson,
+Lukas Mai, Renee Baecker, Ricardo Signes, Sawyer X, Stevan Little, Steve Hay,
+Tony Cook.
+
+The list above is almost certainly incomplete as it is automatically generated
+from version control history.  In particular, it does not include the names of
+the (very much appreciated) contributors who reported issues to the Perl bug
+tracker.
+
+Many of the changes included in this version originated in the CPAN modules
+included in Perl's core.  We're grateful to the entire CPAN community for
+helping Perl to flourish.
+
+For a more complete list of all of Perl's historical contributors, please see
+the F<AUTHORS> file in the Perl source distribution.
 
 =head1 Reporting Bugs
 
