--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -126,6 +126,10 @@ XXX
 
 L<XXX> has been upgraded from version A.xx to B.yy.
 
+=item *
+
+L<ExtUtils::CBuilder> has been upgraded from version 0.280225 to 0.280226.
+
 =back
 
 =head2 Removed Modules and Pragmata
